Change work card image to include link

--- a/index.html
+++ b/index.html
@@ -38,22 +38,30 @@
         <div id="img-panel">
             <div class="img-panel-title"><h2>My Work</h2></div>
             <div class="img-panel-main">
-                <div class="card">
-                    <img src="./img/rps.jpg" alt="">
-                    <div class="card-text"><a href="./rock-paper-scissors.html">Rock Paper Scissors</a></div>
-                </div>
-                <div class="card">
-                    <img src="./img/calculator.jpg" alt="">
-                    <div class="card-text">Calculator</div>
-                </div>
-                <div class="card">
-                    <img src="./img/img-panel-pen.jpg" alt="">
-                    <div class="card-text"><a href="./etchasketch.html">Etch-A-Sketch</a></div>
-                </div>
-                <div class="card">
-                    <img src="./img/under_construction.jpg" alt="">
-                    <div class="card-text">Coming Soon</div>
-                </div>
+                <a href="./rock-paper-scissors.html">
+                    <div class="card">
+                        <img src="./img/rps.jpg" alt="">
+                        <div class="card-text">Rock Paper Scissors</div>
+                    </div>
+                </a>
+                <a>
+                    <div class="card">
+                        <img src="./img/calculator.jpg" alt="">
+                        <div class="card-text">Calculator</div>
+                    </div>
+                </a>
+                <a href="./etchasketch.html">
+                    <div class="card">
+                        <img src="./img/img-panel-pen.jpg" alt="">
+                        <div class="card-text">Etch-A-Sketch</div>
+                    </div>
+                </a>
+                <a>
+                    <div class="card">
+                        <img src="./img/under_construction.jpg" alt="">
+                        <div class="card-text">Coming Soon</div>
+                    </div>
+                </a>
             </div>
         </div>
         <div class="quote-panel">
