Add more h tags

--- a/index.html
+++ b/index.html
@@ -41,25 +41,25 @@
                 <a href="./rock-paper-scissors.html">
                     <div class="card">
                         <img src="./img/rps.jpg" alt="">
-                        <div class="card-text">Rock Paper Scissors</div>
+                        <div class="card-text"><h3>Rock Paper Scissors</h3></div>
                     </div>
                 </a>
                 <a>
                     <div class="card">
                         <img src="./img/calculator.jpg" alt="">
-                        <div class="card-text">Calculator</div>
+                        <div class="card-text"><h3>Calculator</h3></div>
                     </div>
                 </a>
                 <a href="./etchasketch.html">
                     <div class="card">
                         <img src="./img/img-panel-pen.jpg" alt="">
-                        <div class="card-text">Etch-A-Sketch</div>
+                        <div class="card-text"><h3>Etch-A-Sketch</h3></div>
                     </div>
                 </a>
                 <a>
                     <div class="card">
                         <img src="./img/under_construction.jpg" alt="">
-                        <div class="card-text">Coming Soon</div>
+                        <div class="card-text"><h3>Coming Soon</h3></div>
                     </div>
                 </a>
             </div>
@@ -68,16 +68,15 @@
             <div class="quote-panel-title"><h2>Basic Info</h2></div>
             <div class="quote-container">
                 <div class="quote-left"><ul class="quote-list"><li>Nationality</li><li>Age</li><li>Home</li><li>Favorite Food</li></ul></div>
-                <div class="quote-center"><ul class="quote-list"><span class="material-icons">east</span><span class="material-icons">east</span><span class="material-icons">east</span><span class="material-icons">east</span></ul></div>
-                <div class="quote-right"><ul class="quote-list"><li>Canadian</li><li>30</li><li>Miyagi, Japan</li><li>Ramen</li></ul></div>
+                <div class="quote-center"><ul class="quote-list"><li><span class="material-icons">east</span></li><li><span class="material-icons">east</span></li><li><span class="material-icons">east</span></li><li><span class="material-icons">east</span></li></ul></div>
+                <div class="quote-right"><ul class="quote-list"><li>Canadian</li><li>30</li><li>Miyagi</li><li>Ramen</li></ul></div>
             </div>
-            <!-- <div class="quote-name">-Gavin Sutton, website creator</div> -->
         </div>
         <div class="sign-up-panel">
             <div class="modal">
                 <div class="modal-contents">
-                    <div class="modal-header">Interested in working together?</div>
-                    <div class="modal-text">Send me an email!</div>
+                    <div class="modal-header"><h2>Interested in working together?</h2></div>
+                    <div class="modal-text"><h3>Send me an email!</h3></div>
                 </div>
                 <button id="modal-button"><span id="myEmail">Email</span></button>
             </div>
