Add resume DL icon, mobile header resize

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
                                 <a class="a-header" href="./index.html">Home</a>
                                 <a class="a-header" href="./about.html">About</a>
                                 <a class="a-header" href="./index.html#img-panel">Work</a>
-                                <a class="a-header" href="./document/resume.pdf" target="_blank">Resumé</a>
+                                <a class="a-header" href="./document/resume.pdf" target="_blank">Resumé <span class="material-icons inline-material-icons">file_download</span></a>
                         </div>
                     </div>
                 </div>
