Add tooltips, disable work header link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="header-links">
                     <a class="a-header" href="./index.html">Home</a>
                     <a class="a-header" href="./about.html">About</a>
-                    <a class="a-header" href="#img-panel">Work</a>
+                    <a class="a-header out-of-service tooltip"><!-- href="./index.html#img-panel"-->Work<span class="tooltiptext">Temporarily Disabled</span></a>
                     <a class="a-header" href="./document/resume.pdf" target="_blank">Resumé <span class="material-icons inline-material-icons">file_download</span></a>
             </div>
         </div>
