Disable links to project temporarily

--- a/about.html
+++ b/about.html
@@ -17,10 +17,10 @@
                 <div class="hero">
                     <div class="header">
                         <div class="header-links">
-                                <a class="a-header" href="./index.html">Home</a>
-                                <a class="a-header" href="./about.html">About</a>
-                                <a class="a-header out-of-service tooltip"><!-- href="./index.html#img-panel"-->Work<span class="tooltiptext">Temporarily Disabled</span></a>
-                                <a class="a-header" href="./document/resume.pdf" target="_blank">Resumé <span class="material-icons inline-material-icons">file_download</span></a>
+                                <a class="a-header prevent-select" href="./index.html">Home</a>
+                                <a class="a-header prevent-select" href="./about.html">About</a>
+                                <a class="a-header prevent-select" href="./index.html#img-panel">Work</a>
+                                <a class="a-header prevent-select" href="./document/resume.pdf" target="_blank">Resumé <span class="material-icons inline-material-icons">file_download</span></a>
                         </div>
                     </div>
                 </div>
