--- a/about.html
+++ b/about.html
@@ -54,11 +54,12 @@
   
                     <div class="slideshow-container">
                         <div class="">                       
-                            <div class="about-text textSlides fade">Caption Text 1</div>
+                            <div class="about-text textSlides fade">Born January 26th, 1993 from a Northern Irish mother and Canadian father in Victoria, British Columbia. A city of approximately 350,000 people it is well known for its quiet atmosphere, gardens, and a places where many come to retire. A short trip just across the water is the  vibrant city of Vancouver where you can experience, in many ways, a completely different atmosphere. For the younger generations Victoria is said to be a bit of a boring place, and while I can agree with that notion, it is no doubt somewhere I could comfortably live my whole life.</div>
                         </div>
                       
                         <div class="">                       
-                            <div class="about-text textSlides fade">Caption Text 2</div>
+                            <div class="about-text textSlides fade">There's three things I cannot get enough of in life: coffee, alcohol, and video games. Some might say I have an addictive personality, and I would say to those people, you're probably right. Ever since I was young child I was always enticed by games, possibly stemming from my dad's love for them. In fact I remember a picture of myself as an infant sitting on my dad's lap while he sits at the computer playing Command & Conquer. When I got older I undoubtedly loved those series of games. To this day I still have captivating experiences with new games and hope I can enjoy them for a long time to come.
+                            <br><br> When it comes to my other two vices, err-- I mean "favorite beverages", these are more recent likes, as you could imagine. Like many people, coffee and alcohol were definitely acquired tastes and to this day I'm still in the process of attempting to enjoy it all. Unlike alcohol, coffee is a two-part love, drinking AND brewing. Being able to control so many aspects of the flavor through just simple steps is a very satisfying process for me. It's really quite apparent how much power you have when you do mess it up and the result is an awful bitter, or watery cup. As much as I love it, maybe surprisingly, I do tend to only drink one cup a day in the mornings. Because? Well... because the night is for drinking!   </div>
                         </div>
                       
                         <div class="">                       
