Remove work/project section temporarily

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
                         <div class="header-links">
                                 <a class="a-header prevent-select" href="./index.html">Home</a>
                                 <a class="a-header prevent-select" href="./about.html">About</a>
-                                <a class="a-header prevent-select" href="./index.html#img-panel">Work</a>
+                                <!-- <a class="a-header prevent-select" href="./index.html#img-panel">Work</a> -->
                                 <a class="a-header prevent-select" href="./document/resume.pdf" target="_blank">Resumé <span class="material-icons inline-material-icons">file_download</span></a>
                         </div>
                     </div>
