--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="header-links">
                     <a class="a-header prevent-select" href="./index.html">Home</a>
                     <a class="a-header prevent-select" href="./about.html">About</a>
-                    <a class="a-header prevent-select" href="./index.html#img-panel">Work</a>
+                    <!-- <a class="a-header prevent-select" href="./index.html#img-panel">Work</a> -->
                     <a class="a-header prevent-select" href="./document/resume.pdf" target="_blank">Resumé <span class="material-icons inline-material-icons">file_download</span></a>
             </div>
         </div>
@@ -34,35 +34,35 @@
         </div>
     </div>
     <div class="main">
-        <div id="img-panel">
+        <!-- <div id="img-panel">
             <div class="img-panel-title"><h2>My Work</h2></div>
             <div class="img-panel-main">
-                <a class="out-of-service tooltip"> <!-- href="./rock-paper-scissors.html">--> <span class="tooltiptext">Unavailable</span> 
+                <a class="out-of-service tooltip">href="./rock-paper-scissors.html"><span class="tooltiptext">Unavailable</span> 
                     <div style="opacity:0.6;" class="card">
                         <img src="./img/rps.jpg" alt="hands displaying rock, paper, and scissors">
                         <div class="card-text"><h3>Rock Paper Scissors</h3></div>
                     </div>
                 </a>
-                <a class="out-of-service tooltip"> <!-- href="./calculator.html"--> <span class="tooltiptext">Unavailable</span>
+                <a class="out-of-service tooltip">href="./calculator.html"<span class="tooltiptext">Unavailable</span>
                     <div style="opacity:0.6;" class="card">
                         <img src="./img/calculator.jpg" alt="">
                         <div class="card-text"><h3>Calculator</h3></div>
                     </div>
                 </a>
-                <a class="out-of-service tooltip"> <!-- href="./etch-a-sketch.html"--> <span class="tooltiptext">Unavailable</span>
+                <a class="out-of-service tooltip">href="./etch-a-sketch.html"<span class="tooltiptext">Unavailable</span>
                     <div style="opacity:0.6;" class="card">
                         <img src="./img/img-panel-pen.jpg" alt="">
                         <div class="card-text"><h3>Etch-A-Sketch</h3></div>
                     </div>
                 </a>
-                <a class="out-of-service tooltip"> <!-- href="./example.html"--> <span class="tooltiptext">Unavailable</span>
+                <a class="out-of-service tooltip">href="./example.html"<span class="tooltiptext">Unavailable</span>
                     <div style="opacity:0.6;" class="card">
                         <img src="./img/under_construction.jpg" alt="">
                         <div class="card-text"><h3>Coming Soon</h3></div>
                     </div>
                 </a>
             </div>
-        </div>
+        </div> -->
         <div class="quote-panel">
             <div class="quote-panel-title"><h2>Basic Info</h2></div>
             <div class="quote-container">
