Fix spacing for desktop index page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="hero-contents">
             <div class="hero-text">
                 <div class="hero-text-title"><h1>Gavin <br> Sutton</h1></div>
-                <div class="hero-text-main">Web Developer based in Miyagi, Japan.</div>
+                <div class="hero-text-main">Web Developer based in Miyagi, Japan</div>
                 <button class="hero-text-button" onclick="window.location.href='./about.html';">About Me</button>
             </div>
             <div class="hero-img">
@@ -73,10 +73,8 @@
         </div>
         <div class="sign-up-panel">
             <div class="modal">
-                <div class="modal-contents">
-                    <div class="modal-header"><h2>Interested in working together?</h2></div>
-                    <div class="modal-text"><h3>Send me an email!</h3></div>
-                </div>
+                <div class="modal-header"><h2>Let's work together!</h2></div>
+                <div class="modal-text"><h3>Send me an email!</h3></div>
                 <button id="modal-button"><span id="myEmail">Email</span></button>
             </div>
 
