Adjust spacing on about page for desktop

--- a/about.html
+++ b/about.html
@@ -13,16 +13,16 @@
     <body>
         <div class="background">
             <div class="body-container">
-                <div class="hero">
+
                     <div class="header">
                         <div class="header-links">
                                 <a class="a-header prevent-select" href="./index.html">Home</a>
                                 <a class="a-header prevent-select" href="./about.html">About</a>
-                                <!-- <a class="a-header prevent-select" href="./index.html#img-panel">Work</a> -->
+                                <a class="a-header prevent-select" href="./index.html#img-panel">Work</a>
                                 <a class="a-header prevent-select" href="./document/resume.pdf" target="_blank">Resumé <span class="material-icons inline-material-icons">file_download</span></a>
                         </div>
                     </div>
-                </div>
+
                 <div class="about-main">
                     <!-- <div class="main-title">
                         <h1>About Me</h1>
