Add separate js files for each page

--- a/about.html
+++ b/about.html
@@ -5,11 +5,11 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>About</title>
+        <script src="about.js" defer></script>
         <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
           rel="stylesheet">
     </head>
-
     <body>
         <div class="background">
             <div class="body-container">
@@ -74,45 +74,4 @@
             </div>
         </div>
     </body>
-
-    <script>
-    document.querySelectorAll('.a-header').forEach
-    (link => {
-        if(link.href === window.location.href){
-            link.setAttribute('aria-current', 'page')
-        }
-    })
-
-    let slideIndex = 1;
-        showSlides(slideIndex);
-
-    // Next/previous controls
-    function plusSlides(n) {
-        showSlides(slideIndex += n);
-}
-
-    // Thumbnail image controls
-    function currentSlide(n) {
-        showSlides(slideIndex = n);
-}
-
-    function showSlides(n) {
-        let i;
-        let textSlides = document.getElementsByClassName("text-slides");
-        let slides = document.getElementsByClassName("img-slides");
-        let dots = document.getElementsByClassName("dot");
-        if (n > slides.length) {slideIndex = 1}
-        if (n < 1) {slideIndex = slides.length}
-        for (i = 0; i < slides.length; i++) {
-            slides[i].style.display = "none";
-            textSlides[i].style.display = "none";
-        }
-        for (i = 0; i < dots.length; i++) {
-            dots[i].className = dots[i].className.replace(" active", "");
-        }
-        slides[slideIndex-1].style.display = "flex";
-        textSlides[slideIndex-1].style.display = "block";
-        dots[slideIndex-1].className += " active";
-}
-    </script>
 </html>
