Attribute images to creator

--- a/about.html
+++ b/about.html
@@ -69,7 +69,8 @@
                         </div>
                 </div>
                 <div class="footer">
-                    Created by Gavin Sutton
+                    Created by Gavin Sutton<br>
+                    Images Designed by Freepik
                 </div>
             </div>
         </div>
