--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
             </div>
         </div>
     <div class="footer">
-        Created by Gavin Sutton
+        Created by Gavin Sutton<br>
+        Images Designed by Freepik
     </div>
 </div>
 <!-- Hidden popup element-->
