--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
                 <a class="a-header prevent-select" href="./index.html">Home</a>
                 <a class="a-header prevent-select" href="./about.html">About</a>
                 <a class="a-header prevent-select" href="./index.html#img-panel">Work</a>
-                <div class="dropdown">
-                    <button class="dropbtn" onclick="dropdownToggle()">More<span class="material-icons inline-material-icons">expand_more</span></button>
+                <div class="dropbtn prevent-select" onclick="dropdownToggle()">More<span class="material-icons inline-material-icons prevent-select">expand_more</span>
                     <div class="dropdown-content" id="myDropdown">
-                        <a href="./document/resume.pdf" target="_blank">Resumé<span class="material-icons inline-material-icons">file_download</span></a>
-                        <a href="https://github.com/Swarmz/project-landing-page" target="_blank">My GitHub <span class="material-icons inline-material-icons">open_in_new</span></a>
-                        <a href="https://www.theodinproject.com/about" target="_blank">The Odin Project <span class="material-icons inline-material-icons">open_in_new</span></a>
+                        <a class="prevent-select" href="./document/resume.pdf" target="_blank">Resumé<span class="material-icons inline-material-icons">file_download</span></a>
+                        <a class="prevent-select" href="https://github.com/Swarmz/project-landing-page" target="_blank">My GitHub <span class="material-icons inline-material-icons">open_in_new</span></a>
+                        <a class="prevent-select" href="https://www.theodinproject.com/about" target="_blank">The Odin Project <span class="material-icons inline-material-icons">open_in_new</span></a>
                     </div>
                 </div>
             </div>
