Move prev and next button positions for desktop

--- a/about.html
+++ b/about.html
@@ -18,12 +18,11 @@
                             <a class="a-header prevent-select" href="./index.html">Home</a>
                             <a class="a-header prevent-select" href="./about.html">About</a>
                             <a class="a-header prevent-select" href="./index.html#img-panel">Work</a>
-                            <div class="dropdown">
-                                <button class="dropbtn" onclick="dropdownToggle()">More<span class="material-icons inline-material-icons">expand_more</span></button>
+                            <div class="dropbtn prevent-select" onclick="dropdownToggle()">More<span class="material-icons inline-material-icons prevent-select">expand_more</span>
                                 <div class="dropdown-content" id="myDropdown">
-                                    <a href="./document/resume.pdf" target="_blank">Resumé<span class="material-icons inline-material-icons">file_download</span></a>
-                                    <a href="https://github.com/Swarmz/project-landing-page" target="_blank">My GitHub <span class="material-icons inline-material-icons">open_in_new</span></a>
-                                    <a href="https://www.theodinproject.com/about" target="_blank">The Odin Project <span class="material-icons inline-material-icons">open_in_new</span></a>
+                                    <a class="prevent-select" href="./document/resume.pdf" target="_blank">Resumé<span class="material-icons inline-material-icons">file_download</span></a>
+                                    <a class="prevent-select" href="https://github.com/Swarmz/project-landing-page" target="_blank">My GitHub <span class="material-icons inline-material-icons">open_in_new</span></a>
+                                    <a class="prevent-select" href="https://www.theodinproject.com/about" target="_blank">The Odin Project <span class="material-icons inline-material-icons">open_in_new</span></a>
                                 </div>
                             </div>
                         </div>
@@ -56,7 +55,7 @@
                     </div>
                         <div class="text-slides fade">
                             <p><img class="about-text-img" src="./img/victoria.jpg" alt="side of an old building">                     
-                            Born January 26th, 1993 in Victoria, British Columbia. A city of approximately 350,000 people it is well known for its quiet atmosphere, gardens, and a places where many come to retire. A short trip just across the water is the  vibrant city of Vancouver where you can experience, in many ways, a completely different atmosphere. For the younger generations Victoria is said to be a bit of a boring place, and while I can agree with that notion, it is no doubt somewhere I could comfortably live my whole life.
+                            Born January 26th, 1993 in Victoria, British Columbia. A city of approximately 350,000 people it is well known for its quiet atmosphere, gardens, and a place where many come to retire. A short trip just across the water is the  vibrant city of Vancouver where you can experience, in many ways, a completely different atmosphere. For the younger generations Victoria is said to be a bit of a boring place, and while I can agree with that notion, it is no doubt somewhere I could comfortably live my whole life.
                             I grew up as an only child, in a middle class household. My father and mother divorced when I was very young, leaving me with no real memories of my Dad other than seeing pictures of us. My mother was born in Belfast, Northern Ireland. Yes, there is a north and south and yes they are different countries. Anyway, she moved to Canada by herself in her 20's. It took some time but eventually ended up settling in Victoria.  </p>
                         </div>
                         <div class="text-slides fade">                       
